--- a/day1/PythonSet102.ipynb
+++ b/day1/PythonSet102.ipynb
@@ -7333,7 +7333,7 @@
       "source": [
         "# Functions with one positional argument\n",
         "\n",
-        "def mySecondFunction(PersonName):\n",
+        "def mySecondFunction(PersonsName):\n",
         "  print(PersonsName)\n",
         "\n",
         "mySecondFunction(\"Olaf\")\n",
@@ -8751,9 +8751,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Importing the required module as alias plt, mth, and np\n",
+        "# Importing the required modules as aliases plt and np\n",
         "import matplotlib.pyplot as plt\n",
-        "import math as mth\n",
         "import numpy as np\n",
         "\n",
         "# Generate x from 0 to 1*pi (not included) with the step size of 0.01 between each value\n",
@@ -9629,7 +9628,7 @@
         "class Mammal(Animal):\n",
         "    pass\n",
         "\n",
-        "# If you do not specify the constructor explicitely in Dog subclass\n",
+        "# If you do not specify the constructor explicitly in Dog subclass\n",
         "class Dog(Mammal):\n",
         "    pass\n",
         "\n",
